@@ -32,6 +32,8 @@ Current, Shigio Yamaguchi  <shigio@gnu.org>
 	* global: use lid(1) rather than gid(1).
 	* usable.c: locate command for BINDIR additionally to PATH.
 	* htags: bless.sh remove cgi-bin/global.cgi because it is not needed.
+	* htags: changed open into 'open + exec' to avoid command substitutions
+	  in pattern.
 
 Jan 22 2002, Shigio Yamaguchi  <shigio@gnu.org>
 
